--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,22 +1,235 @@
-html {
-  font-size: 14px;
+#cuerpo, body {
+    background-color: #19191A;
+    color: white;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+footer {
+    padding-top: 1%;
+    margin-bottom:20px;
+    color: white;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+/*De aqui para abajo estan los estilos del index*/
+#navbar {
+    background-color: #1A1E23;
+    width: 100%;
+    height: 70px;
+    overflow-y: auto;
+    position: fixed;
+    z-index: 1;
+    font-size: 20px;
+    a{
+    color: white;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
+#intro {
+    padding: 5% 0px 0px 17%;
+    h3{
+        padding: 20px 0px 0px 5%;
+    }
+
+}
+
+#barraLateral {
+    margin-top: 3%;
+    background-color: #1A1E23;
+    h2{
+        margin-top: 13%;
+      }
+}
+
+.sidebar {
+    width: 250px;
+    background-color: #1A1E23;
+    color: white;
+    padding: 15px;
+    position: fixed;
+    height: 100%;
+}
+
+.content {
+    padding-top: 100px;
+    margin-left: 260px;
+    flex-grow: 2;
+h1
+{
+    padding-top: 50px;
+    margin-left: 240px;
+    padding-bottom: 50px;
+}
+
+h3 {
+    margin-left: 280px;
+}
+
+}
+
+#index {
+    width: 40%;
+    height: 40%;
+    margin: 0px 0px 12% 52%;
+}
+
+/*De aqui para abajo estan los estilos del carrusel de perfiles*/
+
+#intro2 {
+    padding: 0px 0px 20px 25%;
+    h3
+
+{
+    padding: 20px 0px 0px 5%;
+}
+
+}
+
+
+#carrusel {
+    padding: 6% 0px 14% 12%;
+}
+
+.profiles {
+    display: flex;
+    gap: 100px;
+    overflow-x: auto;
+}
+
+.profile-name {
+    display: flex;
+    margin: 20px 0px 5% 50px
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.circle {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+    .circle img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+
+    .circle::before {
+        content: "";
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background-color: #ff9900;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+
+    .circle::after {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background-color: #f0f0f0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -2;
+    }
+
+    .circle::before {
+        background-color: #ff9900;
+    }
+
+    .circle::after {
+        background-color: #f0f0f0;
+    }
+
+
+/*De aqui para abajo estan los estilos de SignUp*/
+
+
+#intro3 {
+    padding: 6% 0px 28px 9%;
+}
+
+#formulario {
+    background-color: #1A1E23;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 0px 0px 9px 160px;
+    margin: 0px 150px 3% 160px;
+}
+
+#signUp {
+    width:90%;
+}
+
+
+
+/*De aqui para abajo estan los estilos de login*/
+
+
+#intro4 {
+    padding: 6% 0px 28px 9%;
+}
+
+#formulario2 {
+    background-color: #1A1E23;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 0px 0px 9px 160px;
+    margin: 0px 150px 3% 160px;
+}
+
+#login {
+    width:440%;
+}
+
+/*De aqui para abajo estan los estilos de Creador*/
+
+
+.header {
+    text-align: center;
+    position: relative;
+}
+
+.full-width-image {
+    width: 100%;
+    height: auto; 
+    display: block; 
+}
+
+.profile-image {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-top: -75px; 
+    border: 5px solid white; 
+}
+
+.level {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.subscribe-button {
+    background-color: #28a745;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
 }
