--- a/Views/Home/SignUp.cshtml
+++ b/Views/Home/SignUp.cshtml
@@ -19,7 +19,7 @@
         <div class="col-7">
             <div id="formulario">
                 <h1 class="col-5 pt-5 pb-5">Datos personales del perfil</h1>
-                <form asp-controller="" asp-action="" method="">
+                <form asp-controller="" asp-action="" method="post">
                     <div class="row">
                         <div class="col-8 pt-3 pb-2">
                             <label for="Nombre Completo" class="form-label">Nombre Completo</label>
