--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -19,15 +19,15 @@
         <div class="col-7">
             <div id="formulario2">
                 <h1 class="col-5 pt-5 pb-5">Datos personales del perfil</h1>
-                <form asp-controller="" asp-action="" method="post">
+                <form asp-controller="Home" asp-action="Login" method="post">
                     <div class="row">
                         <div class="col-8 pt-3 pb-2">
                             <label for="Username" class="form-label">Username</label>
-                            <input type="text" class="form-control" aria-label="Username">
+                            <input type="text" class="form-control" aria-label="Username" name="Username">
                         </div>
                         <div class="col-8 pt-3 pb-2">
                             <label for="Contrasena" class="form-label">Contrasena</label>
-                            <input type="password" class="form-control" aria-label="Contrasena">
+                            <input type="password" class="form-control" aria-label="Contrasena" name="Contrasena">
                         </div>
                         <div class="col-12 pt-3 pb-2">
                             <button type="submit" class="btn btn-primary mt-5  mb-5">Guardar Datos</button>
