--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -34,6 +34,7 @@
                             <a href="@Url.Action("signUp", "Home")" class="ps-2 ms-3"> ¿No tienes una cuenta?</a>
                         </div>
                     </div>
+                    <div asp-validation-summary="All"></div>
                 </form>
             </div>
         </div>
