--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Talent_Trade.styles.css" asp-append-version="true" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-           rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
@@ -16,16 +16,32 @@
         <nav id="navbar" class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="@Url.Action("Index", "Home")"
-                   <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" 
-                        width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" 
+                    width="30" height="24" class="d-inline-block align-text-top">
                     Talent Trade
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto">
+                        @if (User.IsInRole("creador"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Creador")">
+                                    <i class="fas fa-pencil-alt"></i> Mi pagina
+                                </a>
+                            </li>
+                        }
+                        @if (!User.IsInRole("creador") && User.IsInRole("usuario"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Creador")">
+                                    <i class="fas fa-pencil-alt"></i> Vuelvete un creador
+                                </a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Home")">Inicio</a>
                         </li>
