--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -13,12 +13,14 @@ footer {
 #navbar {
     background-color: #1A1E23;
     width: 100%;
-    height: 70px;
+    /* height: 70px; */ /* Elimina o aumenta este valor */
     overflow-y: auto;
     position: fixed;
     z-index: 1;
     font-size: 20px;
-    a{
+    a
+
+{
     color: white;
 }
 
@@ -232,6 +234,27 @@ h3 {
     margin-bottom: 20px;
 }
 
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.post-image-container {
+    height: 500px; 
+    overflow: hidden;
+}
+
+.post-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.post-content-container {
+    margin-top: 20px;
+}
+
 /*De aqui para abajo estan los estilos del popUp creador*/
 
 .modal-toggle {
@@ -336,4 +359,35 @@ button[type="submit"] {
     border: none;
     border-radius: 3px;
     cursor: pointer;
+}
+
+
+/*De aqui para abajo estan los estilos del publicacion*/
+
+#intro5 {
+    text-align: center;
+    position: relative;
+    padding-top: 6%;
+    padding-bottom 15%;
+}
+
+.product-card {
+    border: 1px solid #ccc;
+    padding: 20px;
+    text-align: center;
+}
+
+.product-image {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.product-badge {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    color: #fff;
+    font-weight: bold;
 }
