Se modificacion el controlador y  el nombre de Detalle#

--- a/Views/Creador/Index.cshtml
+++ b/Views/Creador/Index.cshtml
@@ -43,7 +43,7 @@
         <div>
             <div class="container">
                 <div class="post-image-container">
-                    <a href="@Url.Action("Detalle", "Creador")">
+                    <a href="@Url.Action("Index", "Publicacion")">
                         <img src="~/img/login.png" alt="Imagen destacada" class="post-image">
                     </a>
                 </div>
