--- a/Views/Publicacion/Index.cshtml
+++ b/Views/Publicacion/Index.cshtml
@@ -4,24 +4,18 @@
 
 <h1 id="intro5">Contenido Exclusivo</h1>
 
-<div class="container">
-    <div>
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="product-card">
-                    <img src="https://www.solbyte.com/blog/wp-content/uploads/iot.jpg" class="product-image" alt="Producto">
-                    <h2>Titulo de la publicacion</h2>
-                    <p>Bundle of 6 excel sheets for 3 phase power calculators.</p>
-                    <p>
-                        <a href="https://www.patreon.com/theengineeringmindset/shop"
-                           class="btn btn-primary">Suscribete</a>
-                    </p>
-                    <p><strong>$3</strong></p>
-                    <p>Fecha de publicacion: </p>
-                </div>
+<div>
+    <div class="container">
+        <div class="post-image-container">
+            <img src="~/img/login.png" alt="Imagen destacada" class="post-image">
+        </div>
+
+        <div class="post-content-container">
+            <h1 class="post-title">Título de la publicación</h1>
+            <p class="post-date">Fecha de publicación</p>
+            <p class="post-content">Contenido de la publicación</p>
+            <div class="comments">
             </div>
         </div>
     </div>
-
-
 </div>
